<?xml version="1.0"?>
<?xml-model href="http://download.ros.org/schema/package_format3.xsd" schematypens="http://www.w3.org/2001/XMLSchema"?>
<package format="3">
  <name>rc_car_bringup</name>
  <version>0.1.0</version>
  <description>Bringup launch files for RC car Visual SLAM project</description>
  <maintainer email="jinwooseo@todo.todo">jinwooseo</maintainer>
  <license>MIT</license>

  <exec_depend>rclpy</exec_depend>
  <exec_depend>launch</exec_depend>
  <exec_depend>launch_ros</exec_depend>
  <exec_depend>tf2_ros</exec_depend>
  <exec_depend>camera_ros</exec_depend>
  <exec_depend>mpu6050_driver</exec_depend>
  <exec_depend>imu_filter_madgwick</exec_depend>
  <exec_depend>wheel_odometry</exec_depend>
  <exec_depend>robot_localization</exec_depend>
  <exec_depend>rtabmap_slam</exec_depend>
  <exec_depend>rtabmap_viz</exec_depend>

  <export>
    <build_type>ament_python</build_type>
  </export>
</package>
